CODEX-Batch variable resolution persistence